# DWT-OpenCL

./: CMakeLists.txt  CMakePresets.json  README.md  dwt.h  dwt_1d.cl  dwt_2d.cl  dwt_53.cl  dwt_53_cpu.cc  dwt_53_gpu.cc  dwt_97.cl  dwt_97_cpu.cc  dwt_97_gpu.cc  dwt_cpu.cc  dwt_cpu.h  dwt_gpu.cc  dwt_gpu.h  main.cc  ppm.cc  ppm.h
doc/: gmu-template.aux  gmu-template.out  gmu-template.tex  titlepage.tex
doc/images/: Forward53.emf
